--- a/driver/rtl8188C_8192C_usb_linux_v4.0.2_9000.20130911/Makefile
+++ b/driver/rtl8188C_8192C_usb_linux_v4.0.2_9000.20130911/Makefile
@@ -29,7 +29,7 @@ CONFIG_PCI_HCI = n
 CONFIG_SDIO_HCI = n
 
 CONFIG_MP_INCLUDED = n
-CONFIG_POWER_SAVING = y
+CONFIG_POWER_SAVING = n
 CONFIG_USB_AUTOSUSPEND = n
 CONFIG_HW_PWRP_DETECTION = n
 CONFIG_WIFI_TEST = n
@@ -38,7 +38,9 @@ CONFIG_RTL8192CU_REDEFINE_1X1 = n
 CONFIG_INTEL_WIDI = n
 CONFIG_WAKE_ON_WLAN = n
 
-CONFIG_PLATFORM_I386_PC = y
+CONFIG_PLATFORM_ARM_BCM2708 = y
+
+CONFIG_PLATFORM_I386_PC = n
 CONFIG_PLATFORM_TI_AM3517 = n
 CONFIG_PLATFORM_ANDROID_X86 = n
 CONFIG_PLATFORM_JB_X86 = n
@@ -234,6 +236,16 @@ endif
 
 ifeq ($(CONFIG_INTEL_WIDI), y)
 EXTRA_CFLAGS += -DCONFIG_INTEL_WIDI
+endif
+
+ifeq ($(CONFIG_PLATFORM_ARM_BCM2708), y)
+EXTRA_CFLAGS += -DCONFIG_LITTLE_ENDIAN
+ARCH = arm
+KVER := 4.1.18-1-ARCH
+CROSS_COMPILE = arm-linux-gnueabihf-
+MODDESTDIR := $(shell pwd)/../../../../lib/modules/$(KVER)+/kernel/drivers/net/wireless/
+KSRC := $(shell pwd)/../../../../linux
+DEPMOD_CMD :=
 endif
 
 ifeq ($(CONFIG_PLATFORM_I386_PC), y)
